9. Istio-Traffic-Management/vote-dog-cat/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vote-dog-cat-gateway
  namespace: vote-dog-cat
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 8000
      name: http-dev
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vote-dog-cat
  namespace: vote-dog-cat
spec:
  hosts:
  - "*"
  gateways:
  - vote-dog-cat-gateway
  http:
  - match:
    - uri: 
        prefix: /vote-api
    route:
    - destination:
        host: frontend
        port:
          number: 8000
      weight: 50
    - destination:
        host: frontend2
        port:
          number: 8000
      weight: 50
